# ai_bot

./: .gitignore  .pre-commit-config.yaml  Readme.md  exp.py  main.py  pyproject.toml
src/: loader.py  main.py  utils.py
